# cairo

./: Cargo.toml  README.md
.github/workflows/: sync.yml
cli/: Cargo.toml
cli/src/: cairo_compile.rs  cairo_fmt.rs  cairo_lsp.rs  cairo_run.rs  sierra_compile.rs  starknet_compile.rs  starknet_sierra_compile.rs
